Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-03-29 Kimmo
 PATCH: [ 1689854 ] C# development file filter
  Filters new file: CSharp_loose.flt
 BUG: [ 1689778 ] Refresh should be in view menu, not the edit menu
  Patch from Dan Pidcock
  Src: Merge.rc
  Src/Languages/*: Merge*.rc
 PATCH: [ 1689515 ] Swedish translation of "Page Se&tup"
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc

2007-03-27 Tim
 RFE: [ 1646407 ] Use "equal" or "not equal" as file compare icon
  (Fixed the blurred icons and minimize the flicking effect)
  Src: ChildFrm.cpp
  Src/res: MergeDoc.ico

2007-03-27 WinMerge experimental release 2.7.3.2 (SVN revision 4201)

2007-03-26 Tim
 PATCH: [ 1688012 ] Remove IDR_MAINFRAME icon from lang files
  Src: AboutDlg.cpp Merge.rc resource.h
  Src/Languages/*: Merge*.rc
 PATCH: [ 1684865 ] WinMerge Icon Set Revision 4
  (Now with the 256*256 versions)
  Src/res: MergeDoc.ico MergeProject.ico

2007-03-26 Kimmo
 PATCH: [ 1687966 ] Fix crash when changing compare method
  Src: DiffContext.cpp DiffContext.h FolderCmp.cpp

2007-03-26 Gal
 BUG: [ 1687754 ] Editor regression in trunk (2)
  Src: stringdiffs.cpp stringdiffsi.h

2007-03-26 Gal
 BUG: [ 1639453 ] Imaginary difference highlighted in character level mode
  Src: stringdiffs.cpp

2007-03-25 Tim
 PATCH: [ 1687661 ] Remove ICONS and BITMAPS from lang files
  Src/Languages/*: Merge*.rc
 PATCH: [ 1687983 ] Remove IMAGES and CURSORS from lang files
  Src/Common: Picture.cpp
  Src/editlib: ccrystaltextview.cpp
  Src/Languages/*: Merge*.rc

2007-03-25 Gal
 BUG: [ 1687754 ] Editor regression in trunk
  Src: stringdiffs.cpp stringdiffsi.h

2007-03-25 Takashi
 Japanese translation - update
  Src/Languages/Japanese/MergeJapanese.rc

2007-03-25 Takashi
 PATCH: [ 1687430 ] printing patch
  Src: Merge.rc MergeEditView.cpp MergeEditView.h
  Src/Common: SplitterWndEx.cpp SplitterWndEx.h