@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2007-03-29 Tim
+ PATCH: [ 1646210 ] Use CSS for HTML report
+  Src: DirCmpReport.cpp
+
 2007-03-29 Kimmo
  PATCH: [ 1689854 ] C# development file filter
   Filters new file: CSharp_loose.flt
